tests/invalid_inputs/sema/func_param_name_repeat.cpp
// test that the compiler catches repetition of parameter names

void foo(int a, char a);
